in progress of completely reactive